# lbe

./: .gitignore  Cargo.toml  README.md  default.nix  justfile
asan_runtime/: Cargo.toml
asan_runtime/src/: asan_hook.rs  asan_intrinsic.rs  asan_runtime.rs  lib.rs
coverage_runtime/: Cargo.toml
coverage_runtime/src/: coverage_internal.rs  coverage_runtime.rs  lib.rs  mmap.rs  pp.rs  util.rs
coverage_runtime/tests/: runtime_test.rs
delta_debugging/: Cargo.toml
delta_debugging/src/: lib.rs
delta_debugging/tests/: dd_test.rs
example-code/asan/: asan-example.c  asan-example2.c
example-code/coverage/: get_odd_even_diff.c
example-code/fuzzer/: target.c
example-code/race/: race-example  race-example-fix.c  race-example-unsafe  race-example-unsafe.rs  race-example.c  race-example.rs
example-code/symbolic/: example.smt  symbolic-example.c
example-others/hardhat/: package-lock.json
example/unit-test/: justfile  math.c  math.h  test.cpp
fuzzer/: Cargo.toml
fuzzer/src/: bucket.rs  campaign.rs  cli.rs  fuzzer.rs  lib.rs  main.rs  mmap.rs  mutator.rs  qwfqf  seed.rs  ui.rs  util.rs
fuzzer/tests/: fuzzer_test.rs
fuzzer_runtime/: Cargo.toml
fuzzer_runtime/src/: coverage.rs  internal.rs  lib.rs  runtime.rs
instrument/: Cargo.toml
instrument/src/: asan.rs  cfg.rs  cli.rs  coverage.rs  fuzz.rs  inkwell_intrinsic.rs  lib.rs  llvm_intrinsic.rs  main.rs  module.rs  names.rs  race.rs  symbolic.rs
instrument/tests/: cfg.rs  instrument_test.rs  util.rs
race_runtime/: Cargo.toml
race_runtime/src/: runtime.rs  state.rs
race_runtime/tests/: race_test.rs
symbolic_runtime/: Cargo.toml
symbolic_runtime/src/: lib.rs  runtime.rs  symbolic.rs
synthesis/: asan_model.py  requirements.txt
tools/: Cargo.toml
tools/src/: cli.rs  compile.rs  lib.rs  main.rs  util.rs
tools/tests/: integration_test.rs  run.sh  symbolic_run.sh  test.sh
(+26 files in other folders)
