[package]
name = "coverage_runtime"
version = "0.1.0"
edition = "2021"

[lib]
name = "coverage_runtime"
crate-type = ["rlib", "cdylib"] # `rlib` is for unit test, `cdylib` is for C runtime

[dependencies]
heapless = "0.8.0"
lazy_static = "1.5.0"
libc = "0.2"
tabled = "0.18.0"
memmap2 = "0.9.5"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
defer-lite = "1.0.0"
serial_test = "3.2.0"
