[package]
name = "instrument"
version = "0.1.0"
edition = "2021"

[dependencies]
inkwell = { version = "0.5.0", features = ["llvm17-0"] }
anyhow = "1.0.97"
libc = "0.2"
clap = "4.5.32"
uuid = { version = "1.16.0", features = ["v4"] }
lazy_static = "1.5.0"
petgraph = "0.8.1"

[dev-dependencies]
defer-lite = "1.0.0"
rand = "0.9.0"

[lib]
name = "instrument"
path = "src/lib.rs"

[[bin]]
name = "instrument"
path = "src/main.rs"
