[package]
name = "symbolic_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
instrument = { path = "../instrument" }
libc = "0.2.172"
z3 = "0.10"
z3-sys = "0.6.0"
rand = "0.9.1"

# z3 = "0.12"
# z3-sys = "0.8.1"

# z3 = { version =  "0.10", features = ["static-link-z3"] }

[lib]
crate-type = ["rlib", "cdylib"]
